--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,140 @@
-.App {
+.banner p{
+  font-size: 20px;
+  max-width: 520px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+.banner-img {
+  position: absolute;
+  right: 13%;
+  top: 15%;
+  width: 400px;
+}
+
+.banner-img img {
+  width: 100%;
+  height: 400%;
+  border-radius: 20px;
+}
+
+.bar{
+  padding: 10px 13px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btnReceive input {
+  padding: 12px 16px;
+  margin-top: 20px;
+  background: #495E57;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+}
+
+.cards {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem 1rem;
+}
+
+.heading {
+  
+}
+
+.menu-icon {
+  display: none;
+  cursor: pointer;
+}
+
+.menu-items {
+  width: 350px;
+  background: #a9c8be;
+  border-radius: 8px;
+}
+
+.menu-container {
+  margin: 110px auto;
+  padding: 10px 11%;
+}
+
+.menu-container h2 {
+  color: #000;
+}
+
+.menu-content {
+  padding: 5px 15px;
+}
+
+.menu-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.navbar {
+  padding: 10px 13px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav-links.visible {
+  flex-direction: column;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  width: 100%;
+  background-color: #495E57;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all .3s ease-in-out;
+}
+
+.orderBtn {
+  padding: 5px 12px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .App {
   text-align: center;
   background-color: #61dafb;
 }
@@ -36,4 +172,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
